Fixed the overflow of hotelInfo component in hotel card, in mobile screen

--- a/src/components/Ad/Ad.module.css
+++ b/src/components/Ad/Ad.module.css
@@ -3,3 +3,7 @@
     display: none;
   }
 }
+
+.Ad {
+  cursor: pointer;
+}
