--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -2,6 +2,7 @@
   background-color: #f5f5f5;
   padding: 15px;
   width: 225px;
+  height: 440px;
 }
 
 .Filters h4 {
