--- a/src/components/HotelCard/HotelInfo/HotelInfo.module.css
+++ b/src/components/HotelCard/HotelInfo/HotelInfo.module.css
@@ -53,6 +53,9 @@
   .RoomType {
     display: none;
   }
+  .HotelInfo {
+    padding: 5px;
+  }
 }
 
 @media (max-width: 992px) and (min-width: 769px) {
